--- a/homecasa_agent/config.yaml
+++ b/homecasa_agent/config.yaml
@@ -1,5 +1,5 @@
 name: HomeCasa Agent
-version: "1.0.0"
+version: "1.0.1"
 slug: homecasa_agent
 description: Secure bridge between HomeCasa and your Home Assistant - enables remote access via Cloudflare Tunnel
 url: https://github.com/gcheng53/homecasa-addons
@@ -9,6 +9,7 @@ arch:
   - armhf
   - armv7
   - i386
+init: false
 startup: application
 boot: auto
 host_network: true
