--- a/homecasa_agent/config.yaml
+++ b/homecasa_agent/config.yaml
@@ -1,15 +1,14 @@
 name: HomeCasa Agent
-version: "1.0.7"
+version: "1.0.8"
 slug: homecasa_agent
-description: Secure bridge between HomeCasa and your Home Assistant - enables remote access via Cloudflare Tunnel
-url: https://github.com/gcheng53/homecasa-addons
+description: Local agent for HomeCasa smart home control - connects Home Assistant to HomeCasa Cloud via Cloudflare Tunnel
+url: https://github.com/homecasa/homecasa-agent
 arch:
   - aarch64
   - amd64
   - armhf
   - armv7
   - i386
-init: false
 startup: application
 boot: auto
 host_network: true
@@ -20,13 +19,11 @@ options:
   tunnel_token: ""
   agent_api_key: ""
   ha_token: ""
-  ha_base_url: ""
   port: 8099
 schema:
   tunnel_token: str
   agent_api_key: str
-  ha_token: str?
-  ha_base_url: str?
+  ha_token: str
   port: int(1024,65535)?
 ports:
   8099/tcp: 8099
