--- a/homecasa_agent/package.json
+++ b/homecasa_agent/package.json
@@ -1,8 +1,11 @@
 {
   "name": "homecasa-agent",
-  "version": "1.0.0",
-  "private": true,
+  "version": "1.0.8",
+  "description": "HomeCasa Agent for Home Assistant",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "express": "^4.18.2"
   }
