--- a/homecasa_agent/package.json
+++ b/homecasa_agent/package.json
@@ -1,12 +1,10 @@
 {
   "name": "homecasa-agent",
-  "version": "1.0.8",
-  "description": "HomeCasa Agent for Home Assistant",
+  "version": "1.0.9",
+  "private": true,
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ws": "^8.16.0"
   }
 }
